src/objects/Console__c.object
<CustomObject>
    <description>Stores settings for Data Asset &amp; Partnerships Compare Report, Leadership Dashboard links, controls Executive Dashboard picklist values.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When Active, this picklist value will be aggregated in the charts and displayed using the value in Display Name field.</description>
        <inlineHelpText>Only Active picklist values will be displayed in Executive Dashboards. If inactive, it will be grouped to Other.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>The display name to be shown in the charts corresponding to this Picklist Value. Restricted to 20 characters.</description>
        <inlineHelpText>Enter Display name of drop down if picklist value to be shown on Executive Dashboards is different. Restricted to 20 characters.</inlineHelpText>
        <label>Display Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PicklistFieldValueUnique_TF__c</fullName>
        <description>Field updated by workflow to ensure Unique pair of Picklist Field &amp; Picklist Value.</description>
        <inlineHelpText>Field updated by workflow to ensure Unique pair of Picklist Field &amp; Picklist Value.</inlineHelpText>
        <label>PicklistFieldValueUnique_TF</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Picklist_Field_Name__c</fullName>
        <description>Enter the Picklist Name(eg: Region, Therapeutic Area) here and the exact correct Picklist Value in the &quot;Name&quot; field. Only Active picklist values will be displayed in Executive Dashboard Charts.</description>
        <inlineHelpText>Enter the Picklist Name(eg: Region, Therapeutic Area) here and the exact correct Picklist Value in the &quot;Name&quot; field. Only Active picklist values will be displayed in Executive Dashboard Charts.</inlineHelpText>
        <label>Picklist Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Console</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Picklist_Field_Name__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Executive_Dashboard</fullName>
        <columns>NAME</columns>
        <columns>Picklist_Field_Name__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Console__c.Executive_Dashboard_Setting</value>
        </filters>
        <label>Executive Dashboard</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Console</pluralLabel>
    <recordTypes>
        <fullName>Executive_Dashboard_Setting</fullName>
        <active>true</active>
        <description>For controlling Picklist Values of specified Picklists in Executive Dashboard</description>
        <label>Executive Dashboard Setting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Generic_Console_Setting</fullName>
        <active>true</active>
        <description>For Leadership Dashboard as well as Data Asset &amp; Partnership Compare Report</description>
        <label>Generic Console Setting</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>